force-app/main/default/objects/Committee_District360__c/Committee_District360__c.object-meta.xml
<CustomObject>
    <description>Committee are used to capture information regarding different Committees that operate within the district.</description>
    <label>Committee</label>
    <nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>