force-app/main/default/objects/Committee_District360__c/fields/Active_District360__c.field-meta.xml
<CustomField>
    <fullName>Active_District360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>