force-app/main/default/objects/Committee_District360__c/fields/End_date_District360__c.field-meta.xml
<CustomField>
    <fullName>End_date_District360__c</fullName>
    <label>End date</label>
    <type>Date</type>
</CustomField>