force-app/main/default/objects/Committee_District360__c/fields/Start_date_District360__c.field-meta.xml
<CustomField>
    <fullName>Start_date_District360__c</fullName>
    <label>Start date</label>
    <type>Date</type>
</CustomField>