force-app/main/default/objects/Committee_District360__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Subcommittee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>