force-app/main/default/objects/Committee_District360__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active_District360__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Committees</label>
</ListView>